membuat class mahasiswa dengan sifat public dan 2 member

--- a/pointer_033/pointer_033.vcxproj
+++ b/pointer_033/pointer_033.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="pointer2.cpp" />
     <ClCompile Include="pointer_033.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
