--- a/pointer_033/pointer_033.vcxproj.filters
+++ b/pointer_033/pointer_033.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="pointer_033.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="pointer2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
